--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>奧黛的顏色 My Mom</title>
     
     <meta property="og:title" content="奧黛的顏色 My Mom - 電子繪本">
-    <meta property="og:description" content="這是一本關於母愛與奧黛的溫馨故事。點擊連結線上閱讀，體驗翻頁效果。">
+    <meta property="og:description" content="這是一本關於身分認同與自我和解的溫馨故事，適合國中生閱讀。">
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://MikeLungChihC.github.io/flipbook-demo/">
     <meta property="og:image" content="https://MikeLungChihC.github.io/flipbook-demo/images/1.jpg">
